    blank the 2nd one.

2007-03-22 cjg
 * Fixed an issue which meant that after removing a user the system went to
    an undefined screen. Now goes to the front which isn't ideal, but is
    better.

2007-03-22 cjg
 * XML import finding an incorrect top level tag now tells you what it was
    actually expecting. In the case of Import::XML getting <eprintsdata> it
    gives some advice about v2 and v3 XML files.

2007-03-22 cjg
 * Commented out heavy regexps in indexer.pl

2007-03-27 tdb
 * Fixes to conversion plugins (tested using new Convert interface in 3.1)
 * If a document contains no files (shouldn't happen) don't throw lots of
	undef warnings
 * Added html_phrase_id method to Plugin.pm that returns the id of a plugin
	phrase (avoids getting phrases a lot when querying conversion plugins)

2007-03-27 tdb
 * file_perms and dir_perms can now be strings in SystemSettings

2007-03-30 tdb
 * quote command line arguments in invocation, using quotemeta

2007-04-11 cjg
 * Bail out of an unpack if there is no mimetype, avoiding an undef warning.

2007-04-11 cjg
 * Don't index fileinfo field!

2007-04-11 cjg
 * Fixed ordering of subjects in view. (sort by name_name rather than name)

2007-04-11 cjg
 * changed "authors" to "creators" in export/endnote

2007-04-11 cjg
 * Removed custom_order from lift_embargos which should fix a bug.

2007-04-11 cjg
 * Changed custom_order again to make it sort by name, then failing that
    name_name.
 * ordervalues now gets passed dataset.
 * Compound fields now have their ordervalues set.

2007-04-12 cjg
 * Added index to __index tables causing a great indexing speed improvemnt.
 * Bad db version now does an abort() instead of a log - that way the
    message appears in the web output.

2007-04-13 cjg
 * Fixed spelling mistake recieve => receive
 * Improved the help text regarding security documents and contact-email.
 * Added missing phrase: eprint_fieldname_producers_name
